[gd_scene load_steps=6 format=3 uid="uid://djsjompwrap8t"]

[ext_resource type="Script" uid="uid://dbguo6y7xf2te" path="res://Scenes/HUD/hud.gd" id="1_5aai8"]
[ext_resource type="FontFile" uid="uid://4stmtwwrtt5u" path="res://Assets/Fonts/Pixellari.ttf" id="1_33i1w"]

[sub_resource type="Animation" id="Animation_5aai8"]
resource_name = "fade_label"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainContainer/CenterContainer/Label:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.86667),
"transitions": PackedFloat32Array(2.46229, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.03333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_label"
}]
}

[sub_resource type="Animation" id="Animation_a56j6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainContainer/CenterContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a56j6"]
_data = {
&"RESET": SubResource("Animation_a56j6"),
&"fade_label": SubResource("Animation_5aai8")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5aai8")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CenterContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_bottom = 200

[node name="Label" type="Label" parent="MainContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_33i1w")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a56j6")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
